--- a/homework/index.html
+++ b/homework/index.html
@@ -12,7 +12,213 @@
     <div id="main">
       <div id="container">
         <div id="content" role="main">
-          <!-- TODO: Content goes here -->
+          <img src='./logo.png'>
+          <h1>HTML BASICS</h1>
+          <nav>
+            <a href=#>Home</a>
+            <a href=#>Registration</a>
+            <a href=#>Headings</a>
+            <a href=#>lists</a>
+            <a href=#>Types of</a>
+            <a href=#>Image</a>
+            <a href=#>Table</a>
+            <a href=#>Blockquotes</a>
+            <a href=#>Text formats</a>
+          </nav>
+          <hr>
+          <p>
+            <b>Fructose</b>, or
+            <b>fruit sugar</b>, is a simple
+            <em>ketonic monosaccharide</em> found in many plants, where it is often bonded to glucose to form the
+            disaccharide
+            sucrose.
+            It is one of the three dietary
+            <u>monosaccharides</u>, along with glucose and galactose, that are absorbed directly into blood during
+            digestion.
+            Its formula is C6H12O6 and its density is 1.694 g/cm<sup>3</sup> .
+            Fructose was discovered by French chemist
+            <a href=#>Augustin-Pierre Dubrunfaut</a> in
+            <mark>1847</mark>, <del>not in 1848</del>.
+          </p>
+          <p>
+            It makes us <strong>strong!</strong>
+            <em>This is emphasized.</em>
+          </p>
+          <p>
+            Excessive consumption of fructose (especially from sugar-sweetened beverages) may contribute to insulin
+            resistance, obesity, elevated
+            <abbr title='Low-density lipoprotein'>LDL</abbr> cholesterol and triglycerides, leading to metabolic
+            syndrome.
+            The <abbr title='European Food Safety Authority'>EFSA</abbr> stated that fructose may be preferable
+            over sucrose and glucose in
+            sugar-sweetened foods and beverages because of its lower effect on postprandial blood sugar levels, and
+            noted that
+            <em>high intakes of fructose may lead to metabolic complications such as dyslipidaemia, insulin
+              resistance,
+              and increased visceral adiposity</em> (this is a citation).
+          </p>
+          <form>
+            <div>
+              <span>Login:</span>
+              <input />
+            </div>
+            <div>
+              <span>Email:</span>
+              <input />
+            </div>
+            <div>
+              <span>Password:</span>
+              <input />
+            </div>
+            <div>
+              <span>Select Programming Language</span>
+              <select>
+                <option selected>JavaScript</option>
+                <option>Python</option>
+                <option>PHP</option>
+              </select>
+            </div>
+            <div>
+              <textarea></textarea>
+            </div>
+            <button>Submit</button>
+          </form>
+          <p>
+            h1 defines the most important heading. h6 defines the least important heading. Font-size for h1 is the
+            same as font-size for h2, because we have to use only one h1 on the page, and it is commonly used inside
+            header
+          </p>
+          <h2>Heading 2</h2>
+          <h3>Heading 3</h3>
+          <h4>Heading 4</h4>
+          <h5>Heading 5</h5>
+          <h6>Heading 6</h6>
+          <hr>
+
+          <div>
+            <p>Unordered Shopping List</p>
+            <ul>
+              <li>Vegetables:
+                <ul>
+                  <li>Potatos</li>
+                  <li>Carrots</li>
+                  <li>Cucumbers</li>
+                </ul>
+              </li>
+              <li>Fruits:
+                <ul>
+                  <li>Apples</li>
+                  <li>Bananas</li>
+                  <li>Pears</li>
+                </ul>
+              </li>
+              <li>Milk</li>
+              <li>Butter</li>
+            </ul>
+          </div>
+          <div>
+            <h3>Definition List</h3>
+            <p>
+              <b>HTML</b>
+              <br />
+              HTML is the standard markup language to create Web pages.
+            </p>
+            <p>
+              <b>CSS</b>
+              <br />
+              CSS describes how HTML elements are to be displayed.
+            </p>
+            <p>
+              <b>JavaScript</b>
+              <br />
+              JavaScript is a scripting languages, primarily used on the Web.
+            </p>
+          </div>
+          <div>
+            <h3>Ordered To-do List</h3>
+            <ol>
+              <li>Wash your hands</li>
+              <li>Clean your apartment</li>
+              <li>Do your homework
+                <ol type='A'>
+                  <li>Create HTML Page</li>
+                  <li>Check all requirements & folder structure</li>
+                  <li>Upload files</li>
+                </ol>
+              </li>
+            </ol>
+          </div>
+          <hr>
+          <img src='./fruits.jpg' alt='fruits' />
+          <hr>
+          <h3>Sugar content of selected common plant foods (g/100g)</h3>
+          <table>
+            <thead>
+              <tr>
+                <td>Food item</td>
+                <td>Free Fructose</td>
+                <td>Free Glucose</td>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Banana</td>
+                <td>4.9</td>
+                <td>5.0</td>
+              </tr>
+              <tr>
+                <td>Grapes</td>
+                <td>8.1</td>
+                <td>7.2</td>
+              </tr>
+              <tr>
+                <td>Apple</td>
+                <td>5.9</td>
+                <td>2.4</td>
+              </tr>
+              <tr>
+                <td>Pineapple</td>
+                <td>2.1</td>
+                <td>1.7</td>
+              </tr>
+            </tbody>
+          </table>
+          <hr>
+          <h3>Blockquotes</h3>
+          <p>
+            Let’s keep it simple. Italics are good to help set it off from the body text. Be sure to style the
+            citation.
+          </p>
+          <blockquote>
+            "I think we're all sensitive, everyone has a certain way about themselves that people don't like to let
+            their emotions out too often. I think people tend to suppress them and hold them in, so I think there's
+            a
+            bit of that in me."
+            <br />
+            <a href=#>Jason Statham</a>
+          </blockquote>
+          <hr>
+          <h3>Text formats</h3>
+          <div>
+            <h4>Preformatted Text</h4>
+            <pre>
+Text in a <b>pre</b> element
+is displayed in a fixed-width
+font, and it preserves
+both           <b>spaces</b> and
+<b>line breaks</b>
+              </pre>
+          </div>
+          <div>
+            <h4>This is code</h4>
+            <pre>
+<code>.container {
+  width: 100%;
+  padding: 10px 20px;
+  text-align: center;
+}</code>
+              </pre>
+          </div>
         </div>
       </div>
     </div>
